--- a/wash-cloth.html
+++ b/wash-cloth.html
@@ -652,7 +652,7 @@
                 </div>
                 
                 <nav class="nav-menu">
-                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="home.html" class="nav-link">Home</a>
                     <a href="about.html" class="nav-link">About Dimple</a>
                     <div class="nav-dropdown">
                         <a href="graphical-cleaning.html" class="nav-link active">Graphical Cleaning</a>
@@ -663,11 +663,11 @@
                             <a href="manual-wiping.html" class="dropdown-link">Manual Wiping</a>
                         </div>
                     </div>
-                    <a href="index.html#formula1" class="nav-link">Formula 1</a>
-                    <a href="index.html#pricing" class="nav-link">Pricing</a>
-                    <a href="index.html#customer-service" class="nav-link">Customer Service</a>
-                    <a href="index.html#brochures" class="nav-link">Brochures</a>
-                    <a href="index.html#contact" class="nav-contact-button">Contact</a>
+                    <a href="formula1.html" class="nav-link">Formula 1</a>
+                                <a href="home.html#pricing" class="nav-link">Pricing</a>
+            <a href="customer-service.html" class="nav-link">Customer Service</a>
+            <a href="home.html#brochures" class="nav-link">Brochures</a>
+            <a href="home.html#contact" class="nav-contact-button">Contact</a>
                 </nav>
                 
                 <div class="mobile-menu-toggle" id="mobileMenuToggle">
@@ -690,7 +690,7 @@
             <button class="mobile-nav-close" id="mobileNavClose">×</button>
         </div>
         <div class="mobile-nav-links">
-            <a href="index.html" class="mobile-nav-link">Home</a>
+            <a href="home.html" class="mobile-nav-link">Home</a>
             <a href="about.html" class="mobile-nav-link">About Dimple</a>
             <div class="mobile-nav-dropdown">
                 <div class="mobile-nav-parent" id="graphicalCleaningToggle">
@@ -704,11 +704,11 @@
                     <a href="manual-wiping.html" class="mobile-nav-sublink">— Manual Wiping</a>
                 </div>
             </div>
-            <a href="index.html#formula1" class="mobile-nav-link">Formula 1</a>
-            <a href="index.html#pricing" class="mobile-nav-link">Pricing</a>
-            <a href="index.html#customer-service" class="mobile-nav-link">Customer Service</a>
-            <a href="index.html#brochures" class="mobile-nav-link">Brochures</a>
-            <a href="index.html#contact" class="mobile-nav-link nav-contact-button">Contact</a>
+            <a href="formula1.html" class="mobile-nav-link">Formula 1</a>
+            <a href="home.html#pricing" class="mobile-nav-link">Pricing</a>
+            <a href="customer-service.html" class="mobile-nav-link">Customer Service</a>
+            <a href="home.html#brochures" class="mobile-nav-link">Brochures</a>
+            <a href="home.html#contact" class="mobile-nav-link nav-contact-button">Contact</a>
         </div>
     </nav>
 
