--- a/about.html
+++ b/about.html
@@ -1114,6 +1114,12 @@
 
     </footer>
 
+    <!-- Floating "Dimple on Video" Button -->
+    <a href="index.html" class="floating-video-btn">
+        <div class="floating-video-icon"></div>
+        <span class="floating-video-text">Dimple on Video</span>
+    </a>
+
     <!-- JavaScript -->
     <script src="script.js"></script>
 </body>
