--- a/wash-cloth.html
+++ b/wash-cloth.html
@@ -1042,6 +1042,12 @@
         </div>
     </footer>
 
+    <!-- Floating "Dimple on Video" Button -->
+    <a href="index.html" class="floating-video-btn">
+        <div class="floating-video-icon"></div>
+        <span class="floating-video-text">Dimple on Video</span>
+    </a>
+
     <script src="script.js"></script>
 </body>
 </html> 
