--- a/graphical-cleaning.html
+++ b/graphical-cleaning.html
@@ -1438,7 +1438,12 @@
         
     </footer>
 
-    <!-- JavaScript -->
+    <!-- Floating "Dimple on Video" Button -->
+    <a href="index.html" class="floating-video-btn">
+        <div class="floating-video-icon"></div>
+        <span class="floating-video-text">Dimple on Video</span>
+    </a>
+
     <script src="script.js"></script>
 </body>
 </html> 
