--- a/home.html
+++ b/home.html
@@ -458,6 +458,12 @@
 
     </footer>
 
+    <!-- Floating "Dimple on Video" Button -->
+    <a href="index.html" class="floating-video-btn">
+        <div class="floating-video-icon"></div>
+        <span class="floating-video-text">Dimple on Video</span>
+    </a>
+
     <script src="script.js"></script>
 </body>
 </html>
