mobile better spacing

--- a/index.html
+++ b/index.html
@@ -506,15 +506,15 @@
             }
         }
 
-        /* Mobile Responsiveness - Perfect fit optimization */
+        /* Mobile Responsiveness - Improved spacing and breathing room */
         @media (max-width: 768px) {
             .container {
-                padding: 0 1.25rem;
+                padding: 0 2rem;
             }
 
             .logo-section {
-                top: 1rem;
-                left: 1.25rem;
+                top: 1.5rem;
+                left: 2rem;
             }
 
             .logo {
@@ -531,13 +531,13 @@
             }
 
             .landing-container {
-                padding: 3rem 0 1rem;
+                padding: 4rem 0 2rem;
                 min-height: 100vh;
                 height: 100%;
             }
 
             .welcome-section {
-                margin-bottom: 1rem;
+                margin-bottom: 2rem;
             }
 
             .welcome-title {
@@ -556,8 +556,8 @@
             }
 
             .video-section {
-                margin-bottom: 1.75rem;
-                max-width: 95%;
+                margin-bottom: 2.5rem;
+                max-width: 90%;
             }
 
             .video-container {
@@ -586,9 +586,10 @@
             .cta-section {
                 flex-direction: row;
                 align-items: center;
-                gap: 0.6rem;
+                gap: 1rem;
                 flex-wrap: wrap;
                 justify-content: center;
+                margin-bottom: 2rem;
             }
 
             .cta-button {
@@ -603,16 +604,16 @@
         /* Small screens */
         @media (max-width: 480px) {
             .container {
-                padding: 0 1rem;
+                padding: 0 1.5rem;
             }
 
-                         .logo-section {
-                 top: 0.75rem;
-                 left: 1rem;
-             }
+            .logo-section {
+                top: 1.25rem;
+                left: 1.5rem;
+            }
 
             .landing-container {
-                padding: 2.5rem 0 0.75rem;
+                padding: 3.5rem 0 1.5rem;
             }
 
             .welcome-title {
@@ -623,16 +624,16 @@
                 font-size: clamp(0.7rem, 2.5vw, 0.8rem);
             }
 
-                         .video-section {
-                 max-width: 100%;
-                 margin-bottom: 1.75rem;
-             }
+            .video-section {
+                max-width: 85%;
+                margin-bottom: 2.5rem;
+            }
 
             .cta-button {
-                padding: 6px 12px;
-                font-size: 0.6rem;
-                min-width: 100px;
-                max-width: 120px;
+                padding: 8px 16px;
+                font-size: 0.7rem;
+                min-width: 120px;
+                max-width: 140px;
             }
         }
 
@@ -856,11 +857,11 @@
         /* Mobile responsiveness for floating button */
         @media (max-width: 768px) {
             .floating-video-btn {
-                bottom: 1.5rem;
-                right: 1.5rem;
-                padding: 0.85rem 1.25rem;
-                font-size: 0.8rem;
-                gap: 0.6rem;
+                bottom: 2rem;
+                right: 2rem;
+                padding: 1rem 1.5rem;
+                font-size: 0.85rem;
+                gap: 0.75rem;
             }
 
             .floating-video-icon {
@@ -877,11 +878,11 @@
 
         @media (max-width: 480px) {
             .floating-video-btn {
-                bottom: 1rem;
-                right: 1rem;
-                padding: 0.75rem 1rem;
-                font-size: 0.75rem;
-                gap: 0.5rem;
+                bottom: 1.5rem;
+                right: 1.5rem;
+                padding: 0.85rem 1.25rem;
+                font-size: 0.8rem;
+                gap: 0.6rem;
             }
 
             .floating-video-icon {
