--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <style>
         /* About page specific styles - matching index.html exactly */
         
-        /* About Hero Section - matching main hero */
+        /* ENHANCED ABOUT HERO SECTION - Mobile optimized */
         .about-hero {
             position: relative;
             min-height: 100vh;
@@ -19,7 +19,22 @@
             justify-content: center;
             background: linear-gradient(135deg, var(--primary-green) 0%, var(--light-green) 50%, var(--accent-green) 100%);
             overflow: hidden;
-            padding: 130px 0 60px;
+            padding: clamp(100px, 12vh, 150px) 0 clamp(40px, 6vh, 80px);
+        }
+
+        /* Enhanced mobile responsiveness for about page */
+        @media (max-width: 768px) {
+            .about-hero {
+                padding: clamp(80px, 15vh, 120px) 0 clamp(30px, 8vh, 50px);
+                min-height: 90vh;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .about-hero {
+                padding: clamp(70px, 12vh, 100px) 0 clamp(25px, 6vh, 40px);
+                min-height: 85vh;
+            }
         }
 
         .about-hero::before {
