--- a/index.html
+++ b/index.html
@@ -506,134 +506,191 @@
             }
         }
 
-        /* Mobile Responsiveness - Improved spacing and breathing room */
+        /* ENHANCED MOBILE RESPONSIVENESS - Better spacing and touch targets */
         @media (max-width: 768px) {
-            .container {
-                padding: 0 2rem;
-            }
-
-            .logo-section {
-                top: 1.5rem;
-                left: 2rem;
-            }
-
-            .logo {
-                padding: 0.4rem 0.75rem;
-                gap: 0.4rem;
-            }
-
-            .logo-image {
-                height: 24px;
-            }
-
-            .logo-tagline {
-                font-size: 0.65rem;
-            }
-
-            .landing-container {
-                padding: 4rem 0 2rem;
-                min-height: 100vh;
-                height: 100%;
-            }
-
-            .welcome-section {
-                margin-bottom: 2rem;
-            }
-
-            .welcome-title {
-                font-size: clamp(1.3rem, 5.5vw, 2rem);
-                margin-bottom: 0.4rem;
-            }
-
-            .welcome-subtitle {
-                font-size: clamp(0.75rem, 2.8vw, 0.9rem);
-                margin-bottom: 0.5rem;
-            }
-
-            .welcome-badge {
-                padding: 0.35rem 0.7rem;
-                font-size: 0.6rem;
-            }
-
-            .video-section {
-                margin-bottom: 2.5rem;
-                max-width: 90%;
-            }
-
-            .video-container {
-                border-radius: 12px;
-            }
-
-            .play-button {
-                width: 50px;
-                height: 50px;
-            }
-
-            .play-icon {
-                border-left-width: 14px;
-                border-top-width: 9px;
-                border-bottom-width: 9px;
-                margin-left: 2px;
-            }
-
-            .video-label {
-                bottom: 0.65rem;
-                left: 0.65rem;
-                padding: 0.35rem 0.6rem;
-                font-size: 0.6rem;
-            }
-
-            .cta-section {
-                flex-direction: row;
-                align-items: center;
-                gap: 1rem;
-                flex-wrap: wrap;
-                justify-content: center;
-                margin-bottom: 2rem;
-            }
-
-            .cta-button {
-                padding: 7px 14px;
-                font-size: 0.65rem;
-                min-width: 110px;
-                flex: 1;
-                max-width: 130px;
-            }
-        }
-
-        /* Small screens */
-        @media (max-width: 480px) {
             .container {
                 padding: 0 1.5rem;
             }
 
             .logo-section {
-                top: 1.25rem;
+                top: 1.2rem;
                 left: 1.5rem;
+            }
+
+            .logo {
+                padding: 0.35rem 0.65rem;
+                gap: 0.35rem;
+            }
+
+            .logo-image {
+                height: 22px;
+            }
+
+            .logo-tagline {
+                font-size: 0.6rem;
             }
 
             .landing-container {
                 padding: 3.5rem 0 1.5rem;
+                min-height: 100vh;
+                height: 100%;
+                justify-content: center;
+            }
+
+            .welcome-section {
+                margin-bottom: 1.5rem;
             }
 
             .welcome-title {
-                font-size: clamp(1.1rem, 5vw, 1.6rem);
+                font-size: clamp(1.2rem, 5vw, 1.8rem);
+                margin-bottom: 0.4rem;
+                line-height: 1.1;
             }
 
             .welcome-subtitle {
-                font-size: clamp(0.7rem, 2.5vw, 0.8rem);
+                font-size: clamp(0.75rem, 2.5vw, 0.85rem);
+                margin-bottom: 0.5rem;
+                line-height: 1.4;
+                padding: 0 0.5rem;
+            }
+
+            .welcome-badge {
+                padding: 0.3rem 0.6rem;
+                font-size: 0.55rem;
+            }
+
+            .video-section {
+                margin-bottom: 2rem;
+                max-width: 88%;
+            }
+
+            .video-container {
+                border-radius: 10px;
+            }
+
+            .play-button {
+                width: 45px;
+                height: 45px;
+            }
+
+            .play-icon {
+                border-left-width: 12px;
+                border-top-width: 8px;
+                border-bottom-width: 8px;
+                margin-left: 2px;
+            }
+
+            .video-label {
+                bottom: 0.5rem;
+                left: 0.5rem;
+                padding: 0.3rem 0.5rem;
+                font-size: 0.55rem;
+            }
+
+            .cta-section {
+                flex-direction: column;
+                align-items: center;
+                gap: 0.8rem;
+                justify-content: center;
+                margin-bottom: 1.5rem;
+            }
+
+            .cta-button {
+                padding: 9px 18px;
+                font-size: 0.7rem;
+                min-width: 140px;
+                max-width: 200px;
+                width: 100%;
+            }
+        }
+
+        /* ENHANCED SMALL MOBILE SCREENS - iPhone Mini 13 and similar */
+        @media (max-width: 480px) {
+            .container {
+                padding: 0 1.2rem;
+            }
+
+            .logo-section {
+                top: 1rem;
+                left: 1.2rem;
+            }
+
+            .logo {
+                padding: 0.25rem 0.5rem;
+                gap: 0.25rem;
+            }
+
+            .logo-image {
+                height: 20px;
+            }
+
+            .logo-tagline {
+                font-size: 0.55rem;
+            }
+
+            .landing-container {
+                padding: 3rem 0 1rem;
+                justify-content: center;
+            }
+
+            .welcome-section {
+                margin-bottom: 1.2rem;
+            }
+
+            .welcome-title {
+                font-size: clamp(1rem, 4.5vw, 1.4rem);
+                margin-bottom: 0.3rem;
+            }
+
+            .welcome-subtitle {
+                font-size: clamp(0.7rem, 2.2vw, 0.75rem);
+                margin-bottom: 0.4rem;
+                padding: 0 0.3rem;
+            }
+
+            .welcome-badge {
+                padding: 0.25rem 0.5rem;
+                font-size: 0.5rem;
             }
 
             .video-section {
                 max-width: 85%;
-                margin-bottom: 2.5rem;
+                margin-bottom: 1.8rem;
+            }
+
+            .video-container {
+                border-radius: 8px;
+            }
+
+            .play-button {
+                width: 40px;
+                height: 40px;
+            }
+
+            .play-icon {
+                border-left-width: 10px;
+                border-top-width: 6px;
+                border-bottom-width: 6px;
+                margin-left: 1px;
+            }
+
+            .video-label {
+                bottom: 0.4rem;
+                left: 0.4rem;
+                padding: 0.25rem 0.4rem;
+                font-size: 0.5rem;
+            }
+
+            .cta-section {
+                gap: 0.6rem;
+                margin-bottom: 1rem;
             }
 
             .cta-button {
                 padding: 8px 16px;
-                font-size: 0.7rem;
-                min-width: 120px;
-                max-width: 140px;
+                font-size: 0.65rem;
+                min-width: 130px;
+                max-width: 180px;
             }
         }
 
