--- a/wash-cloth.html
+++ b/wash-cloth.html
@@ -22,7 +22,22 @@
             justify-content: center;
             background: linear-gradient(135deg, var(--primary-green) 0%, var(--light-green) 50%, var(--accent-green) 100%);
             overflow: hidden;
-            padding: 130px 0 60px;
+            padding: clamp(100px, 12vh, 150px) 0 clamp(40px, 6vh, 80px);
+        }
+
+        /* Enhanced mobile responsiveness for wash cloth page */
+        @media (max-width: 768px) {
+            .washcloth-hero {
+                padding: clamp(80px, 15vh, 120px) 0 clamp(30px, 8vh, 50px);
+                min-height: 90vh;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .washcloth-hero {
+                padding: clamp(70px, 12vh, 100px) 0 clamp(25px, 6vh, 40px);
+                min-height: 85vh;
+            }
         }
 
         .washcloth-hero::before {
