--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
         }
 
         html {
-            overflow: hidden;
             scroll-behavior: smooth;
             height: 100%;
         }
@@ -50,7 +49,6 @@
             background: linear-gradient(135deg, var(--primary-green) 0%, var(--light-green) 50%, var(--accent-green) 100%);
             min-height: 100vh;
             height: 100%;
-            overflow: hidden;
             position: relative;
             margin: 0;
             padding: 0;
@@ -62,7 +60,7 @@
             margin: 0 auto;
             padding: 0 clamp(1rem, 4vw, 3rem);
             width: 100%;
-            height: 100%;
+            min-height: 100vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -145,7 +143,6 @@
             position: relative;
             z-index: 2;
             min-height: 100vh;
-            height: 100%;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -444,6 +441,9 @@
             .container {
                 padding: 0 clamp(1rem, 3vw, 1.5rem);
                 gap: clamp(1rem, 3vh, 2rem);
+                min-height: 100vh;
+                justify-content: flex-start;
+                padding-top: clamp(4rem, 10vh, 6rem);
             }
 
             .logo-section {
@@ -465,10 +465,9 @@
             }
 
             .landing-container {
-                padding: clamp(3rem, 8vh, 4rem) 0 clamp(1rem, 3vh, 2rem);
+                padding: clamp(1rem, 3vh, 2rem) 0 clamp(1rem, 3vh, 2rem);
                 min-height: 100vh;
-                height: 100%;
-                justify-content: center;
+                justify-content: flex-start;
                 gap: clamp(1rem, 3vh, 2rem);
             }
 
@@ -505,10 +504,6 @@
                 box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
             }
 
-
-
-
-
             .cta-section {
                 flex-direction: column;
                 align-items: center;
@@ -534,6 +529,9 @@
             .container {
                 padding: 0 clamp(0.8rem, 3vw, 1.2rem);
                 gap: clamp(0.75rem, 2vh, 1.5rem);
+                min-height: 100vh;
+                justify-content: flex-start;
+                padding-top: clamp(3rem, 8vh, 5rem);
             }
 
             .logo-section {
@@ -555,8 +553,8 @@
             }
 
             .landing-container {
-                padding: clamp(2.5rem, 6vh, 3.5rem) 0 clamp(0.75rem, 2vh, 1.5rem);
-                justify-content: center;
+                padding: clamp(0.75rem, 2vh, 1.5rem) 0 clamp(0.75rem, 2vh, 1.5rem);
+                justify-content: flex-start;
                 gap: clamp(0.75rem, 2vh, 1.5rem);
             }
 
@@ -707,6 +705,8 @@
                 max-width: min(1200px, 92vw);
                 padding: 0 clamp(1.5rem, 3vw, 2.5rem);
                 gap: clamp(1.5rem, 3vh, 2.5rem);
+                min-height: 100vh;
+                justify-content: center;
             }
 
             .landing-container {
@@ -742,8 +742,6 @@
                 margin-bottom: clamp(1.5rem, 3vh, 2.5rem);
             }
 
-
-
             .cta-button {
                 padding: clamp(10px, 2.5vh, 14px) clamp(18px, 3vw, 24px);
                 font-size: clamp(0.8rem, 1.8vw, 0.9rem);
@@ -761,13 +759,16 @@
         @media (orientation: landscape) and (max-height: 500px) {
             .container {
                 gap: clamp(0.5rem, 2vh, 1rem);
+                min-height: 100vh;
+                justify-content: center;
+                padding-top: clamp(1rem, 3vh, 2rem);
             }
 
             .landing-container {
                 padding: clamp(0.75rem, 2vh, 1.5rem) 0 clamp(0.5rem, 1vh, 1rem);
                 min-height: 100vh;
-                height: 100%;
                 gap: clamp(0.5rem, 2vh, 1rem);
+                justify-content: center;
             }
 
             .logo-section {
@@ -811,15 +812,6 @@
                 font-size: clamp(0.5rem, 1.2vw, 0.6rem);
             }
 
-
-
-            .video-label {
-                bottom: clamp(0.3rem, 0.8vh, 0.5rem);
-                left: clamp(0.3rem, 0.8vw, 0.5rem);
-                padding: clamp(0.2rem, 0.8vh, 0.3rem) clamp(0.3rem, 1vw, 0.5rem);
-                font-size: clamp(0.45rem, 1.2vw, 0.55rem);
-            }
-
             .cta-section {
                 flex-direction: row;
                 gap: clamp(0.4rem, 1.5vw, 0.8rem);
@@ -858,6 +850,46 @@
             .welcome-subtitle {
                 font-size: clamp(1rem, 2vw, 1.3rem);
                 margin-bottom: clamp(0.75rem, 2vh, 1.25rem);
+            }
+        }
+
+        /* Non-fullscreen mode optimization - When F11 is not active */
+        @media (max-height: 800px) and (min-width: 1024px) {
+            .container {
+                padding-top: clamp(2rem, 4vh, 3rem);
+                padding-bottom: clamp(1rem, 2vh, 2rem);
+                gap: clamp(1rem, 2vh, 2rem);
+            }
+
+            .landing-container {
+                padding: clamp(1.5rem, 3vh, 2.5rem) 0 clamp(1rem, 2vh, 2rem);
+                gap: clamp(1rem, 2vh, 2rem);
+            }
+
+            .welcome-section {
+                margin-bottom: clamp(0.75rem, 2vh, 1.5rem);
+            }
+
+            .video-section {
+                margin-bottom: clamp(1rem, 2vh, 2rem);
+                max-width: min(600px, 80vw);
+            }
+
+            .welcome-title {
+                font-size: clamp(1.8rem, 3.5vw, 2.4rem);
+                margin-bottom: clamp(0.4rem, 1vh, 0.8rem);
+            }
+
+            .welcome-subtitle {
+                font-size: clamp(0.9rem, 1.5vw, 1.1rem);
+                margin-bottom: clamp(0.4rem, 1vh, 0.8rem);
+            }
+
+            .cta-button {
+                padding: clamp(10px, 2vh, 14px) clamp(18px, 3vw, 24px);
+                font-size: clamp(0.8rem, 1.5vw, 0.9rem);
+                min-width: clamp(140px, 20vw, 170px);
+                min-height: clamp(44px, 6vh, 52px);
             }
         }
 
@@ -1020,6 +1052,7 @@
                 font-size: clamp(0.8rem, 2vw, 0.9rem);
                 gap: clamp(0.6rem, 1.5vw, 0.9rem);
                 min-height: clamp(44px, 8vh, 52px);
+                z-index: 1001;
             }
 
             .floating-video-icon {
@@ -1042,6 +1075,7 @@
                 font-size: clamp(0.75rem, 1.8vw, 0.85rem);
                 gap: clamp(0.5rem, 1.2vw, 0.7rem);
                 min-height: clamp(40px, 7vh, 48px);
+                z-index: 1001;
             }
 
             .floating-video-icon {
@@ -1063,6 +1097,7 @@
                 right: 1rem;
                 padding: 0.6rem 1rem;
                 font-size: 0.7rem;
+                z-index: 1001;
             }
         }
 
